// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`withUpdating snapshots normal state 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View />
</View>
`;

exports[`withUpdating snapshots updating state 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View />
  <LoadingMask
    style={
      Object {
        "backgroundColor": "rgba(31, 32, 39, 1)",
        "opacity": 0.8,
      }
    }
  />
</View>
`;
